# g2labs-cdf

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md  requirements.txt  test.py
.github/workflows/: cmake-single-platform.yml
cmake/: g2l-unit-test.cmake
components/: CMakeLists.txt
components/callback/: CMakeLists.txt
components/callback/src/: CMakeLists.txt  callback.c  callback.h
components/callback/tests/: CMakeLists.txt  callback-test.c
components/cli/: CMakeLists.txt
components/cli/src/: CMakeLists.txt  cli.c  cli.h
components/cli/tests/: CMakeLists.txt  cli-test.c
components/event-handler/: CMakeLists.txt
components/event-handler/src/: CMakeLists.txt  event-handler.c  event-handler.h
components/event-handler/tests/: CMakeLists.txt  event-handler-test.c
components/g2l-callback/: CMakeLists.txt
components/g2l-callback/src/: CMakeLists.txt  g2l-callback.c  g2l-callback.h
components/g2l-callback/tests/: CMakeLists.txt  g2l-callback-test.c
components/g2l-event-handler/: CMakeLists.txt
components/g2l-event-handler/src/: CMakeLists.txt  g2l-event-handler.c  g2l-event-handler.h
components/g2l-event-handler/tests/: CMakeLists.txt  g2l-event-handler-test.c
components/g2l-linked-list/: CMakeLists.txt
components/g2l-linked-list/src/: CMakeLists.txt  g2l-linked-list.c  g2l-linked-list.h
components/g2l-linked-list/tests/: CMakeLists.txt  g2l-linked-list-test.c
components/linked-list/: CMakeLists.txt
components/linked-list/src/: CMakeLists.txt  (+2 more)
components/modbus/: CMakeLists.txt
docs/: CMakeLists.txt
docs/src/: Doxyfile.in
(+7 files in other folders)
